# CRUX

./: .gitignore  README.md  check_csv.py  test_script.py
components/common/: CMakeLists.txt
components/common/include/: telemetry.h
components/common/src/: telemetry.cpp
controls/: CMakeLists.txt
controls/main/: CMakeLists.txt  app_main.cpp
controls/main/include/: centerlock_controller.h  constants.h  macros.h
controls/main/include/input_output/: shift_register.h
controls/main/src/: centerlock_controller.cpp
daq/: CMakeLists.txt
daq/main/: CMakeLists.txt  app_main.cpp
daq/main/include/: constants.h
daq/main/include/sensors/: brake_pressure_sensor.h  gps_sensor.h  imu_sensor.h  shock_pot_sensor.h
daq/main/src/sensors/: brake_pressure_sensor.cpp  gps_sensor.cpp  imu_sensor.cpp  shock_pot_sensor.cpp
main/: CMakeLists.txt  app_main.cpp
main/include/: centerlock_controller.h  constants.h  ecvt_controller.h  odrive.h  telemetry.h
main/include/filters/: iir_filter.h  median_filter.h
main/include/sensors/: gear_tooth_sensor.h  gps_sensor.h
main/src/: centerlock_controller.cpp  ecvt_controller.cpp  iir_filter.cpp  median_filter.cpp  odrive.cpp  shift_register.cpp  telemetry.cpp
main/src/sensors/: gps_sensor.cpp
scripts/: bajaPlot.txt  dummy_ecvt_data.csv  logger.py  logger_daq_only.py  plotting.py  test_script.py
scripts/csv_files/: dummy_ecvt_data_0.csv  dummy_ecvt_data_1.csv  dummy_ecvt_data_2.csv  dummy_ecvt_data_3.csv  dummy_ecvt_data_4.csv
